--- a/demo1.html
+++ b/demo1.html
@@ -2,12 +2,9 @@
 <html>
 <head>
   <title>Demo PHP</title>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
   <body>
-    <?php
-
-echo 'test php';
-?>
 <hr>
     demo php html
   </body>
