--- a/demo1.html
+++ b/demo1.html
@@ -5,8 +5,17 @@
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
   <body>
+    my ip : <span id="spanmyip"></span>
 <hr>
     demo php html
+
+    <script>
+      $(document).ready(function(){
+
+        $("#spanmyip").html("test");
+        
+      });
+    </script>
   </body>
   
 </html>
